# visidata

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
