[tool.poetry]
name = "visidata-environment"
version = "0.1.0"
description = "visidata-environment project"
authors = ["Nikolai Mazurkin <mazurkin@gmail.com>"]
readme = ""

[tool.poetry.dependencies]
python = "3.10.19"

[tool.poetry.group.visidata.dependencies]
visidata = "3.3"
pandas = "2.3.3"
pyarrow = "22.0.0"
h5py = "3.15.1"
openpyxl = "3.1.5"
lxml = "6.0.2"
pdfminer-six = "20250506"
matplotlib = "3.10.7"
tabula-py = "2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
